# hackclub-verifier-api

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  wrangler.toml
.github/workflows/: cloudflare.yml  main.yml
src/: lib.rs  main.rs  mod.rs  utils.rs
src/airtable/: fetch.rs  mod.rs  types.rs  update.rs  verify.rs
src/github/: main.rs  mod.rs  types.rs
src/slack/: main.rs  mod.rs  types.rs
