[package]
name = "onboard-verifier"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0.204", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
worker = { version="0.3.4" }
serde_qs = "0.13.0"
service-logging = "0.4.7"
