[package]
name = "onboard-verifier"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0.204", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
worker = { version="0.3.4", features = ["d1"] }
serde_qs = "0.13.0"
service-logging = "0.4.7"
serde_json = "1.0.127"
totp-rs = { version="5.6.0", features = ["otpauth"] }
urandom = "0.1.1"

cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
console_log = { version = "0.2", optional = true }
log = "0.4.22"
wasm-timer = "0.2.5"

[features]
default = ["console_error_panic_hook", "console_log"]
