[package]
name = "onboard-verifier"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0.204", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
worker = "0.3.4"
serde_qs = "0.13.0"
service-logging = "0.4.7"
serde_json = "1.0.127"

cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
log = "0.4.22"
sha3 = "0.10.8"
hex = "0.4.3"
url = "2.5.2"

[features]
default = ["console_error_panic_hook"]

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }